FIX: Hero section CTA - layout broken on 2020 13inch Macbook Pro

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -801,6 +801,11 @@ footer .container-inner > .flex-container {
         height: 400px;
     }
 
+    aside {
+        min-height: 300px;
+        min-width: 300px;
+    }
+
     .card {
         width: 45%;
     }
